# stock-widget

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  stock_icon.rc
src/: config.rs  main.rs  stock.rs  window.rs
