[package]
name = "stock-widget"
version = "0.1.2"
edition = "2021"
description = "Semi-transparent floating stock/ETF ticker for Windows"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_UI_Controls",
    "Win32_System_SystemServices",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }

[build-dependencies]
embed-resource = "3"

[profile.release]
opt-level = 3
lto = true
strip = true
